--- a/package.json
+++ b/package.json
@@ -1,8 +1,5 @@
 {
   "name": "companion-backrooms",
   "version": "1.0.0",
-  "dependencies": {
-    "@anthropic-ai/sdk": "^0.24.1",
-    "firebase-admin": "^12.0.0"
-  }
+  "dependencies": {}
 }
