Rename project from 'companion-backrooms' to 'neuro-backrooms'

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "companion-backrooms",
+  "name": "neuro-backrooms",
   "version": "1.0.0",
+  "description": "AI VTubers trapped in the Backrooms - Neuro-sama, Evil Neuro, and Vedal",
   "dependencies": {}
 }
