Update project description in package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "neuro-backrooms",
   "version": "1.0.0",
-  "description": "AI VTubers trapped in the Backrooms - Neuro-sama, Evil Neuro, and Vedal",
+  "description": "Neuro Backrooms ($BACKROOMS) - AI VTubers trapped in the Backrooms",
   "dependencies": {}
 }
